[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network Fault Detection"
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_fault_detection"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.1.0"


[features]
default=[]
local-discovery=["sn_networking/local-discovery"]

[dependencies]
libp2p = { version="0.52", features = [] }
sn_networking = { path = "../sn_networking", version = "0.4.23" }
sn_protocol = { path = "../sn_protocol", version = "0.5.2" }
tokio = { version = "1.17.0", features = ["fs", "io-util", "macros", "parking_lot", "rt", "sync", "time"] }
tracing = { version = "~0.1.26" }
